# local-orchestrator

./: .gitignore  AGENTS.md  Cargo.toml  README.md
archive/restart-2026-04-04/: Cargo.toml  LICENSE
archive/restart-2026-04-04/crates/orchestrator-ai-harness/: Cargo.toml
archive/restart-2026-04-04/crates/orchestrator-ai-harness/examples/: openai_collect_text.rs  openai_stream_text.rs
archive/restart-2026-04-04/crates/orchestrator-ai-harness/src/: harness.rs  model.rs  provider.rs  run.rs
archive/restart-2026-04-04/crates/orchestrator-ai-harness/src/vendors/: mod.rs
archive/restart-2026-04-04/crates/orchestrator-ai-harness/src/vendors/openai/: config.rs  mod.rs  transport.rs
archive/restart-2026-04-04/crates/orchestrator-examples/: Cargo.toml
archive/restart-2026-04-04/crates/orchestrator-examples/data/personal_reports/: email_template.hbs
archive/restart-2026-04-04/crates/orchestrator-examples/data/personal_reports/daily_notes/: 2026-02-01.md
archive/restart-2026-04-04/crates/orchestrator-examples/data/personal_reports/reports/: consolidated.md  daily.md  weekly.md  yearly.md
archive/restart-2026-04-04/crates/orchestrator-examples/src/workflows/ai_news_digest/: blocks.rs  mod.rs
archive/restart-2026-04-04/crates/orchestrator-examples/src/workflows/personal_reports/: mod.rs
archive/restart-2026-04-04/crates/orchestrator-examples/src/workflows/trial_activation_nudge/: mod.rs
archive/restart-2026-04-04/docs/: ai-harness-api-contract.md  plan.md
archive/restart-2026-04-04/poc/: .env.example  Cargo.toml
archive/restart-2026-04-04/poc/src/: common_error.rs  config.rs  logger.rs  workflow.rs
archive/restart-2026-04-04/poc/src/block/: executor_error.rs  mod.rs  utils.rs
archive/restart-2026-04-04/poc/src/block/cron/: mod.rs
archive/restart-2026-04-04/poc/src/block/delay/: mod.rs
archive/restart-2026-04-04/poc/src/block/email/: utils.rs
archive/restart-2026-04-04/poc/src/block/file/: mod.rs  utils.rs
archive/restart-2026-04-04/poc/src/block/human/: executor.rs  utils.rs
archive/restart-2026-04-04/poc/src/sample_wf/: fs_summary.rs  mod.rs  research.rs
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: config.rs  lib.rs  main.rs  open_ai.rs  workflow.rs
backend/src/block/: executor.rs  executor_error.rs  mod.rs  utils.rs
backend/src/block/ai/: executor.rs  fs_tools.rs  mod.rs  open_ai.rs  utils.rs
backend/src/block/cron/: executor.rs  mod.rs  utils.rs
backend/src/block/delay/: executor.rs  utils.rs
backend/src/block/email/: executor.rs  mod.rs  utils.rs
backend/src/block/file/: executor.rs  mod.rs  utils.rs
backend/src/sample_wf/: fs_summary.rs  mod.rs  newsletter.rs  research.rs  social_report.rs
crates/orchestrator-ai-harness/examples/: openai_stream_text.rs
crates/orchestrator-ai-harness/src/: content.rs  errors.rs  lib.rs  prelude.rs  session.rs  stream.rs
crates/orchestrator-blocks/: Cargo.toml
crates/orchestrator-blocks/src/: block.rs  combine.rs  cron.rs  custom_transform.rs  file_read.rs  file_write.rs  input_binding.rs  lib.rs  list_directory.rs  markdown_to_html.rs  select_first.rs  send_email.rs  split_by_keys.rs  split_lines.rs  template_handlebars.rs
crates/orchestrator-blocks/src/ai_generate/: mod.rs  openai.rs
crates/orchestrator-blocks/src/http_request/: mod.rs  reqwest_requester.rs
crates/orchestrator-blocks/src/rss_parse/: mod.rs
crates/orchestrator-blocks/src/send_email/: lettre_env.rs  mod.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: lib.rs  workflow.rs
crates/orchestrator-core/src/block/: child_workflow.rs  conditional.rs  config.rs  cron_block.rs  delay.rs  echo.rs  file_read.rs  file_write.rs  filter_block.rs  http_request.rs  merge.rs  mod.rs  policy.rs  registry.rs  split.rs  trigger.rs
crates/orchestrator-core/src/core/: builder.rs  definition.rs  mod.rs  run.rs
crates/orchestrator-core/src/runtime/: graph.rs  mod.rs
crates/orchestrator-examples/: Cargo.toml
crates/orchestrator-examples/data/personal_reports/: .env.example  next_day_note.md  personal_reports_email.html
crates/orchestrator-examples/data/personal_reports/reports/: monthly.md
crates/orchestrator-examples/src/: main.rs
crates/orchestrator-examples/src/workflows/: child_workflow_demo.rs  context_payload_demo.rs  copy_files.rs  cyclic_demo.rs  mod.rs  print_readme.rs  single_file_read.rs
crates/orchestrator-examples/src/workflows/ai_news_digest/: blocks.rs  mod.rs
crates/orchestrator-examples/src/workflows/expense_report/: blocks.rs  mod.rs
crates/orchestrator-examples/src/workflows/expense_report/data/: sample_bank_statement.csv
crates/orchestrator-examples/src/workflows/invoice_line_processor/: mod.rs
crates/orchestrator-examples/src/workflows/invoice_line_processor/data/: sample_lines.txt
crates/orchestrator-examples/src/workflows/news_aggregator/: mod.rs
crates/orchestrator-examples/src/workflows/personal_reports/: blocks.rs  mod.rs
crates/orchestrator-examples/src/workflows/price_drop_checker/: blocks.rs  mod.rs
crates/orchestrator-examples/src/workflows/retry_until_success/: blocks.rs  mod.rs
crates/orchestrator-examples/src/workflows/stock_report/: blocks.rs  mod.rs
crates/orchestrator-examples/src/workflows/stock_report/data/: sample_stocks.csv
dev_infra/: docker-compose.yml
docs/: ai-harness-api-contract.md  ai-harness-plan.md  block-sdk-template.md  block-simplicity-v4.6-plan.md  plan.md
docs/contracts/: trial-activation-nudge-workflow-contract-v3.md
docs/notes/: README.md
docs/pm/: README.md  VISION.md
docs/pm/designs/: README.md
docs/pm/flowcharts/: README.md
docs/pm/prds/: README.md
docs/pm/qa/: README.md
docs/pm/reviews/: README.md
docs/pm/ship/: README.md
docs/pm/templates/: DESIGN_TEMPLATE.md  FLOWCHART_TEMPLATE.md  PRD_TEMPLATE.md  QA_REPORT_TEMPLATE.md  REVIEW_TEMPLATE.md  SHIP_NOTES_TEMPLATE.md  TEST_PLAN_TEMPLATE.md
docs/pm/tests/: README.md
docs/pm/workflow/: AI_EXECUTION_RULES.md
docs/research/: README.md
docs/tech/: README.md
poc/: .env.example
poc/src/: lib.rs  main.rs
poc/src/block/: mod.rs
(+41 files in other folders)
