[package]
name = "backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
chrono = "0.4.43"
cron = "0.15.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dotenvy = "0.15.7"
lettre = "0.11.19"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "zerocopy"] }
