[package]
name = "orchestrator-blocks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Built-in blocks for the orchestrator (Cron, FileRead, FileWrite, Combine, etc.)"

[dependencies]
orchestrator-core = { path = "../orchestrator-core" }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
pulldown-cmark = "0.10"
handlebars = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
feed-rs = "2"
lettre = "0.11"
tracing = "0.1"
smallvec = "1"

[dev-dependencies]
tempfile = "3.24.0"
