[package]
name = "orchestrator-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
lettre = "0.11"
orchestrator-core = { version = "0.1.0", path = "../orchestrator-core" }
orchestrator-blocks = { version = "0.1.0", path = "../orchestrator-blocks" }
polars = { version = "0.52", default-features = false, features = ["csv", "dtype-full"] }
polars_excel_writer = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
uuid = "1.20.0"

[dev-dependencies]
tempfile = "3"
