[package]
name = "poc"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
cron = "0.15.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dotenvy = "0.15.7"
dunce = "1.0.5"
globset = "0.4.18"
hex = "0.4.3"
ignore = "0.4.25"
lettre = "0.11.19"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "zerocopy"] }
