[package]
name = "orchestrator-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
lettre = "0.11"
orchestrator-core = { version = "0.1.0", path = "../orchestrator-core" }
orchestrator-blocks = { version = "0.1.0", path = "../orchestrator-blocks" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
